update better data, clean up script process

--- a/scripts/buildTrackerLists.ipynb
+++ b/scripts/buildTrackerLists.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# path to better.fyi data\n",
-    "# available at https://source.ind.ie/better/content\n",
-    "better_path = '../../better/content'"
+    "# available at https://github.com/UChicagoSUPERgroup/better-content\n",
+    "better_path = '../../better-content'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,13 +71,13 @@
     "        'notes': notes\n",
     "    }\n",
     "\n",
-    "# with open('better_trackers.json', 'w') as f:\n",
-    "#   json.dump(better_data, f, ensure_ascii=False)"
+    "with open('better.json', 'w') as f:\n",
+    "  json.dump(better_data, f, ensure_ascii=False, indent=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,34 +89,37 @@
     "domainEntityMap = {}\n",
     "companyData = {}\n",
     "\n",
-    "with open('disconnect.json') as json_data:\n",
-    "    disconnectList = json.load(json_data)\n",
+    "with open('disconnect.json') as disconnect_json:\n",
+    "    disconnect_list = json.load(disconnect_json)\n",
+    "    \n",
+    "    with open('better.json') as better_json:\n",
+    "        better_data = json.load(better_json)\n",
     "\n",
-    "    for type in disconnectList['categories']:\n",
-    "        for entry in disconnectList['categories'][type]:\n",
-    "            (name, info) = list(entry.items())[0]\n",
-    "            (site, domains) = list(info.items())[0]\n",
+    "        for type in disconnect_list['categories']:\n",
+    "            for entry in disconnect_list['categories'][type]:\n",
+    "                (name, info) = list(entry.items())[0]\n",
+    "                (site, domains) = list(info.items())[0]\n",
     "\n",
-    "            cleanedSite = urlparse(site).hostname\n",
-    "            if not cleanedSite:\n",
-    "                cleanedSite = site[:-1]\n",
-    "            cleanedSite = cleanedSite.split('www.')[-1]\n",
+    "                cleanedSite = urlparse(site).hostname\n",
+    "                if not cleanedSite:\n",
+    "                    cleanedSite = site[:-1]\n",
+    "                cleanedSite = cleanedSite.split('www.')[-1]\n",
     "\n",
-    "            data = {\n",
-    "                'site': cleanedSite,\n",
-    "                'domains': domains,\n",
-    "                'type': type\n",
-    "            }\n",
-    "            if cleanedSite in better_data:\n",
-    "                better = better_data[cleanedSite]\n",
-    "                data['description'] = better['description']\n",
-    "                data['prevalence'] = better['prevalence']\n",
-    "                data['notes'] = better['notes']\n",
+    "                data = {\n",
+    "                    'site': cleanedSite,\n",
+    "                    'domains': domains,\n",
+    "                    'type': type\n",
+    "                }\n",
+    "                if cleanedSite in better_data:\n",
+    "                    better = better_data[cleanedSite]\n",
+    "                    data['description'] = better['description']\n",
+    "                    data['prevalence'] = better['prevalence']\n",
+    "                    data['notes'] = better['notes']\n",
     "\n",
-    "            companyData[name] = data\n",
+    "                companyData[name] = data\n",
     "\n",
-    "            for domain in domains:\n",
-    "                domainEntityMap[domain] = name\n",
+    "                for domain in domains:\n",
+    "                    domainEntityMap[domain] = name\n",
     "\n",
     "\n",
     "# facebook, twitter, and google are classified under the \"disconnect\" category for legacy reasons\n",
@@ -128,15 +131,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('../src/data/trackers/companyData.json', 'w') as f:\n",
-    "  json.dump(companyData, f, ensure_ascii=False)\n",
+    "  json.dump(companyData, f, ensure_ascii=False, indent=2)\n",
     "with open('../src/data/trackers/domainEntityMap.json', 'w') as f:\n",
-    "  json.dump(domainEntityMap, f, ensure_ascii=False)"
+    "  json.dump(domainEntityMap, f, ensure_ascii=False, indent=2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
