add interest popularity filters to sunburst

--- a/data/interests.ipynb
+++ b/data/interests.ipynb
@@ -107,8 +107,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save master json\n",
     "with open('../src/data/interests/interests.json', 'w') as f:\n",
-    "  json.dump(interests, f, ensure_ascii=False, indent=2)"
+    "    json.dump(interests, f, ensure_ascii=False, indent=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make list by popularity\n",
+    "by_impressions = sorted(interests, key=lambda inter: interests[inter]['impressions'], reverse=True)\n",
+    "with open('../src/data/interests/by_impressions.json', 'w') as f:\n",
+    "    json.dump(by_impressions, f, ensure_ascii=False, indent=2)"
    ]
   },
   {
